@startuml PostgreSQL ERD - User Management
!theme plain
skinparam backgroundColor #FFFFFF
skinparam linetype ortho

title PostgreSQL Entity Relationship Diagram - User Management Module

' User Management Entities
entity "User" as user {
  * id : UUID <<PK>>
  --
  * username : VARCHAR(50) <<UNIQUE>>
  * email : VARCHAR(100) <<UNIQUE>>
  * password_hash : VARCHAR(255)
  * role : ENUM(guest, user, programmer, reviewer, manager, admin)
  * is_active : BOOLEAN
  * email_verified : BOOLEAN
  * created_at : TIMESTAMP
  * updated_at : TIMESTAMP
  * last_login : TIMESTAMP
  failed_login_attempts : INTEGER
  locked_until : TIMESTAMP
}

entity "Session" as session {
  * id : UUID <<PK>>
  * user_id : UUID <<FK>>
  --
  * token : VARCHAR(500)
  * expires_at : TIMESTAMP
  * created_at : TIMESTAMP
  ip_address : VARCHAR(45)
  user_agent : TEXT
  is_revoked : BOOLEAN
}

entity "AuditLog" as audit {
  * id : UUID <<PK>>
  * user_id : UUID <<FK>>
  --
  * action : VARCHAR(100)
  * resource_type : VARCHAR(50)
  resource_id : UUID
  details : JSONB
  ip_address : VARCHAR(45)
  user_agent : TEXT
  * timestamp : TIMESTAMP
}

' Relationships
user ||--o{ session : "has"
user ||--o{ audit : "generates"

note right of user
  Primary authentication entity
  - Bcrypt password hashing
  - Account lockout after 5 failed attempts
  - Email verification required
  - Role-based access control
end note

note right of session
  JWT token management
  - Access token: 24h expiry
  - Refresh token: 7d expiry
  - Revocation support
  - IP and user agent tracking
end note

note right of audit
  Comprehensive audit trail
  - All user actions logged
  - 7-year retention
  - Immutable records
  - GDPR compliant
end note

@enduml
